# pixelagent

./: .gitignore  README.md  pyproject.toml  setup.py
blueprints/multi-provider/: README.md
blueprints/multi_provider/: README.md  requirements.txt
cookbook/: agno-test.py  basic.py
cookbook/embedding-index/: audio.py  pdf.py
cookbook/multimodal/: image.py
cookbook/multimodal-search/: audio.py
cookbook/object-detection/: test.py
cookbook/patterns/: flow.py  iterative-reflection.py  planning.py  reflection.py  teams.py
cookbook/persistant/: anthropic-memory.py  openai-memory.py
cookbook/providers/: basic_openai.py  finance_agent.py
cookbook/reflection/: reflection.py  self-reflecting.py
cookbook/self-reflection/: test.py
cookbook/structured-outputs/: finance.py
cookbook/teams/: report-generation.py  research.py
cookbook/tool-calling/: duckduckgo.py  finance.py
examples/getting-started/: basic-chat.py  pixelagent_basics_tutorial.py
examples/memory/: README.md
examples/planning/: README.md  react.py
examples/reflection/: reflection.md  reflection.py
examples/team-workflows/: requirements.txt  team.py
examples/tool-calling/: finance.py  requirements.txt
examples/vision/: image-analyzer.py
pixelagent/: __init__.py  agent.py
pixelagent/anthropic/: __init__.py  agent.py  utils.py
pixelagent/core/: __init__.py  (+5 more)
pxl/: __init__.py  agent.py  index.py  providers.py  types.py
scripts/: release.sh
tests/: README.md  conftest.py  pytest.ini  test.py  test_agent.py  test_anthropic.py  test_bedrock.py  test_gemini.py  test_openai.py
(+122 files in other folders)
