[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixelagent"
version = "0.1.0"
description = "A agent framework built on Pixeltable"
readme = "README.md"
authors = [{"name" = "Pixeltable"}]
license = {"text" = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pixeltable==0.3.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.10"