[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixelagent"
version = "0.1.0"
description = "An agentic framework built on Pixeltable"
readme = "README.md"
authors = [{"name" = "Pixeltable"}]
license = {"text" = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pixeltable",
    "pydantic>=2.0.0",
]
requires-python = ">=3.9"